[package]
name = "nus3audio"
version = "1.0.1"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"
repository = "https://github.com/jam1garner/libnus3audio"
license = "MIT"
description="A library for working with namco nus3audio audio archives."

[dependencies]
itertools = "0.8"
nom = "4"
byteorder = "1.3"
crc = "^1.0.0"
