[package]
name = "nus3audio"
version = "1.2.0"
authors = ["jam1garner <jam@jam1.re>", "BenHall-7 <benjaminjahall@gmail.com>"]
edition = "2018"
repository = "https://github.com/jam1garner/libnus3audio"
license = "MIT"
description="A library for working with namco nus3audio audio archives."
readme = "./README.md"
documentation = "https://docs.rs/nus3audio"

[dependencies]
itertools = "0.8"
nom = "4"
crc = "^1.0.0"
binwrite = ">=0.1.3"
serde = {version = "1", features=["derive"]}
